Update certificates page (email + second alert)

--- a/certificates.html
+++ b/certificates.html
@@ -204,7 +204,7 @@
       </div>
       <div id="mBody" class="kv"></div>
       <div style="display:flex; gap:10px; margin-top:14px; flex-wrap:wrap">
-        <button class="btn" id="sendBtn">Send Email</button>
+        <button class="btn" id="sendBtn">Send Email§</button>
         <button class="dangerBtn" id="deleteBtn">Delete</button>
       </div>
     </div>
